# cpp_smart_pointers_samples

./: CMakeLists.txt  README.txt
src/: main.cpp
src/basics/: CMakeLists.txt
src/basics/include/: basic_concepts.h  enum.h  input_sample.h
src/basics/src/: basic_concepts.cpp  enum.cpp  input_sample.cpp
src/common/: CMakeLists.txt
src/common/include/: common.h
src/common/src/: common.cpp
src/move_semantic/: CMakeLists.txt
src/move_semantic/include/: heavy_resource.h  meeting.h  move_semantic.h  resource_manager.h
src/move_semantic/src/: heavy_resource.cpp  meeting.cpp  move_semantic.cpp  resource_manager.cpp
src/raw_pointers/: CMakeLists.txt
src/raw_pointers/include/: raw_pointers.h
src/raw_pointers/src/: raw_pointers.cpp
src/references/: CMakeLists.txt
src/references/include/: references.h
src/references/src/: references.cpp
src/shared_ptr/: CMakeLists.txt
src/shared_ptr/include/: company.h  employee.h  person.h  shared_pointer.h
src/shared_ptr/src/: company.cpp  employee.cpp  person.cpp  shared_pointers.cpp
src/unique_pointer/: CMakeLists.txt
src/unique_pointer/include/: test.h  unique_container.h  unique_pointer.h
src/unique_pointer/src/: test.cpp  unique_container.cpp  unique_pointer.cpp
